--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
@@ -120,6 +121,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="view\fmrcliente.resx">
       <DependentUpon>fmrcliente.cs</DependentUpon>
@@ -129,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\Fmrfuncionario.resx">
       <DependentUpon>Fmrfuncionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\Fmrproduto.resx">
+      <DependentUpon>Fmrproduto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\fmrsumario.resx">
       <DependentUpon>fmrsumario.cs</DependentUpon>
@@ -150,6 +155,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\9aa5e10b-b8d6-4e13-a4de-839ba6ad8e42.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
