CREATE E UPDATE PRONTO
SÓ FALTA DELETE

--- a/TomMotos/App.config
+++ b/TomMotos/App.config
@@ -4,9 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <connectionStrings>
-    <add name="bd_tommotos" connectionString="server=localhost; user ID=root; password=root; database=bd_tommotos" providerName="MySql.Data.MySqlClient;"/>
+    <add name="bd_tommotos" connectionString="server=localhost; user ID=root; password=password; database=bd_tommotos" providerName="MySql.Data.MySqlClient;"/>
   </connectionStrings>
-  <runtime>
+  <runtime> 
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
