Criação de endereco criada

--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Classes\CargoDAO.cs" />
     <Compile Include="Classes\ClienteDAO.cs" />
     <Compile Include="Classes\EmailDAO.cs" />
+    <Compile Include="Classes\EnderecoDAO.cs" />
     <Compile Include="Classes\FornecedorDAO.cs" />
     <Compile Include="Classes\FuncionarioDAO.cs" />
     <Compile Include="Classes\ProdutoDAO.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Model\CargoModel.cs" />
     <Compile Include="Model\ClienteModel.cs" />
     <Compile Include="Model\EmailModel.cs" />
+    <Compile Include="Model\EnderecoModel.cs" />
     <Compile Include="Model\FornecedorModel.cs" />
     <Compile Include="Model\FuncionarioModel.cs" />
     <Compile Include="Model\ProdutoModel.cs" />
@@ -100,6 +102,12 @@
     </Compile>
     <Compile Include="view\Fmremail.Designer.cs">
       <DependentUpon>Fmremail.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\Fmrendereco.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\Fmrendereco.Designer.cs">
+      <DependentUpon>Fmrendereco.cs</DependentUpon>
     </Compile>
     <Compile Include="view\Fmrfornecedor.cs">
       <SubType>Form</SubType>
@@ -163,6 +171,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\Fmremail.resx">
       <DependentUpon>Fmremail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\Fmrendereco.resx">
+      <DependentUpon>Fmrendereco.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\Fmrfornecedor.resx">
       <DependentUpon>Fmrfornecedor.cs</DependentUpon>
