--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -91,11 +91,11 @@
     <Compile Include="view\Fmrcargo.Designer.cs">
       <DependentUpon>Fmrcargo.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\fmrcliente.cs">
+    <Compile Include="view\Fmrcliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\fmrcliente.Designer.cs">
-      <DependentUpon>fmrcliente.cs</DependentUpon>
+    <Compile Include="view\Fmrcliente.Designer.cs">
+      <DependentUpon>Fmrcliente.cs</DependentUpon>
     </Compile>
     <Compile Include="view\Fmremail.cs">
       <SubType>Form</SubType>
@@ -127,20 +127,14 @@
     <Compile Include="view\Fmrproduto.Designer.cs">
       <DependentUpon>Fmrproduto.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\fmrsumario.cs">
+    <Compile Include="view\Fmrsumario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\fmrsumario.Designer.cs">
-      <DependentUpon>fmrsumario.cs</DependentUpon>
+    <Compile Include="view\Fmrsumario.Designer.cs">
+      <DependentUpon>Fmrsumario.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="view\Fmrsumariocadastro.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="view\Fmrsumariocadastro.Designer.cs">
-      <DependentUpon>Fmrsumariocadastro.cs</DependentUpon>
-    </Compile>
     <Compile Include="view\Fmrtelefone.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,8 +160,8 @@
     <EmbeddedResource Include="view\Fmrcargo.resx">
       <DependentUpon>Fmrcargo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\fmrcliente.resx">
-      <DependentUpon>fmrcliente.cs</DependentUpon>
+    <EmbeddedResource Include="view\Fmrcliente.resx">
+      <DependentUpon>Fmrcliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\Fmremail.resx">
       <DependentUpon>Fmremail.cs</DependentUpon>
@@ -184,11 +178,8 @@
     <EmbeddedResource Include="view\Fmrproduto.resx">
       <DependentUpon>Fmrproduto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\fmrsumario.resx">
-      <DependentUpon>fmrsumario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="view\Fmrsumariocadastro.resx">
-      <DependentUpon>Fmrsumariocadastro.cs</DependentUpon>
+    <EmbeddedResource Include="view\Fmrsumario.resx">
+      <DependentUpon>Fmrsumario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\Fmrtelefone.resx">
       <DependentUpon>Fmrtelefone.cs</DependentUpon>
