--- a/TomMotos/App.config
+++ b/TomMotos/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <connectionStrings>
-    <add name="bd_tommotos" connectionString="server=localhost; user ID=root; password=root; database=bd_tommotos" providerName="MySql.Data.MySqlClient;"/>
+    <add name="bd_tommotos" connectionString="server=localhost; user ID=root; password=password; database=bd_tommotos" providerName="MySql.Data.MySqlClient;"/>
   </connectionStrings>
   <runtime> 
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
