--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Classes\EmailDAO.cs" />
     <Compile Include="Classes\EnderecoDAO.cs" />
     <Compile Include="Classes\FiltroDAO.cs" />
+    <Compile Include="Classes\FinalizarVendaDAO.cs" />
     <Compile Include="Classes\FornecedorDAO.cs" />
     <Compile Include="Classes\LogFornecimentoDAO.cs" />
     <Compile Include="Classes\FuncionarioDAO.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Model\EmailModel.cs" />
     <Compile Include="Model\EnderecoModel.cs" />
     <Compile Include="Model\FiltroModel.cs" />
+    <Compile Include="Model\FinalizarVendaModel.cs" />
     <Compile Include="Model\FornecedorModel.cs" />
     <Compile Include="Model\FuncionarioModel.cs" />
     <Compile Include="Model\ProdutoUsado.cs" />
@@ -148,6 +150,12 @@
     <Compile Include="view\Fmrfuncionario.Designer.cs">
       <DependentUpon>Fmrfuncionario.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\FmrListProdutos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrListProdutos.Designer.cs">
+      <DependentUpon>FmrListProdutos.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\Fmrproduto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +181,12 @@
     </Compile>
     <Compile Include="view\Fmrveiculo.Designer.cs">
       <DependentUpon>Fmrveiculo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\FmrVeiculo_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrVeiculo_Cliente.Designer.cs">
+      <DependentUpon>FmrVeiculo_Cliente.cs</DependentUpon>
     </Compile>
     <Compile Include="view\FrmlogFornecimento.cs">
       <SubType>Form</SubType>
@@ -214,6 +228,9 @@
     <EmbeddedResource Include="view\Fmrfuncionario.resx">
       <DependentUpon>Fmrfuncionario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\FmrListProdutos.resx">
+      <DependentUpon>FmrListProdutos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\Fmrproduto.resx">
       <DependentUpon>Fmrproduto.cs</DependentUpon>
     </EmbeddedResource>
@@ -225,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\Fmrveiculo.resx">
       <DependentUpon>Fmrveiculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\FmrVeiculo_Cliente.resx">
+      <DependentUpon>FmrVeiculo_Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FrmlogFornecimento.resx">
       <DependentUpon>FrmlogFornecimento.cs</DependentUpon>
