--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -74,6 +74,7 @@
     <Reference Include="Zstandard.Net, Version=1.1.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ServicoDAO.cs" />
     <Compile Include="Classes\VendaDAO.cs" />
     <Compile Include="Classes\CargoDAO.cs" />
     <Compile Include="Classes\ClienteDAO.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Classes\TelefoneDAO.cs" />
     <Compile Include="Classes\VeiculoDAO.cs" />
     <Compile Include="Conexao\ConnectionFactory.cs" />
+    <Compile Include="Model\ServicoModel.cs" />
     <Compile Include="Model\CaixaModel.cs" />
     <Compile Include="Model\CargoModel.cs" />
     <Compile Include="Model\ClienteModel.cs" />
