--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>TomMotos</RootNamespace>
     <AssemblyName>TomMotos</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -104,6 +104,12 @@
     <Compile Include="Model\ProdutoModel.cs" />
     <Compile Include="Model\TelefoneModel.cs" />
     <Compile Include="Model\VeiculoModel.cs" />
+    <Compile Include="view\FmrFinalizar_Orcamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrFinalizar_Orcamento.Designer.cs">
+      <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\FmrOrcamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -212,6 +218,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="view\FmrFinalizar_Orcamento.resx">
+      <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\FmrOrcamento.resx">
       <DependentUpon>FmrOrcamento.cs</DependentUpon>
     </EmbeddedResource>
