--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -202,6 +202,12 @@
     <Compile Include="view\FmrVeiculo_Cliente.Designer.cs">
       <DependentUpon>FmrVeiculo_Cliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\FmrVenda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrVenda.Designer.cs">
+      <DependentUpon>FmrVenda.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\FrmlogFornecimento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -265,6 +271,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\FmrVeiculo_Cliente.resx">
       <DependentUpon>FmrVeiculo_Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\FmrVenda.resx">
+      <DependentUpon>FmrVenda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FrmlogFornecimento.resx">
       <DependentUpon>FrmlogFornecimento.cs</DependentUpon>
