--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>TomMotos</RootNamespace>
     <AssemblyName>TomMotos</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -106,6 +106,12 @@
     <Compile Include="Model\ProdutoModel.cs" />
     <Compile Include="Model\TelefoneModel.cs" />
     <Compile Include="Model\VeiculoModel.cs" />
+    <Compile Include="view\FmrAddFunc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrAddFunc.Designer.cs">
+      <DependentUpon>FmrAddFunc.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\FmrDevedores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -232,6 +238,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="view\FmrAddFunc.resx">
+      <DependentUpon>FmrAddFunc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\FmrDevedores.resx">
       <DependentUpon>FmrDevedores.cs</DependentUpon>
     </EmbeddedResource>
