--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -118,6 +118,12 @@
     <Compile Include="view\FmrFinalizar_Orcamento.Designer.cs">
       <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\FmrShowFuncionarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrShowFuncionarios.Designer.cs">
+      <DependentUpon>FmrShowFuncionarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\FmrOrcamento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -237,6 +243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\FmrFinalizar_Orcamento.resx">
       <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\FmrShowFuncionarios.resx">
+      <DependentUpon>FmrShowFuncionarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FmrOrcamento.resx">
       <DependentUpon>FmrOrcamento.cs</DependentUpon>
