--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Model\ProdutoModel.cs" />
     <Compile Include="Model\TelefoneModel.cs" />
     <Compile Include="Model\VeiculoModel.cs" />
+    <Compile Include="view\FmrConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrConfig.Designer.cs">
+      <DependentUpon>FmrConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\FmrDevedores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -238,6 +244,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="view\FmrConfig.resx">
+      <DependentUpon>FmrConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\FmrDevedores.resx">
       <DependentUpon>FmrDevedores.cs</DependentUpon>
     </EmbeddedResource>
