--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -106,6 +106,11 @@
     <Compile Include="Model\ProdutoModel.cs" />
     <Compile Include="Model\TelefoneModel.cs" />
     <Compile Include="Model\VeiculoModel.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="view\FmrConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +128,12 @@
     </Compile>
     <Compile Include="view\FmrFinalizar_Orcamento.Designer.cs">
       <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\FmrLoading.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\FmrLoading.Designer.cs">
+      <DependentUpon>FmrLoading.cs</DependentUpon>
     </Compile>
     <Compile Include="view\FmrShowFuncionarios.cs">
       <SubType>Form</SubType>
@@ -236,14 +247,9 @@
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="view\FmrConfig.resx">
       <DependentUpon>FmrConfig.cs</DependentUpon>
     </EmbeddedResource>
@@ -252,6 +258,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\FmrFinalizar_Orcamento.resx">
       <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\FmrLoading.resx">
+      <DependentUpon>FmrLoading.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FmrShowFuncionarios.resx">
       <DependentUpon>FmrShowFuncionarios.cs</DependentUpon>
