--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>TomMotos</RootNamespace>
     <AssemblyName>TomMotos</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -106,6 +106,11 @@
     <Compile Include="Model\ProdutoModel.cs" />
     <Compile Include="Model\TelefoneModel.cs" />
     <Compile Include="Model\VeiculoModel.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="view\FmrConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,11 +129,11 @@
     <Compile Include="view\FmrFinalizar_Orcamento.Designer.cs">
       <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\FmrShowFuncionarios.cs">
+    <Compile Include="view\FmrShowVendas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\FmrShowFuncionarios.Designer.cs">
-      <DependentUpon>FmrShowFuncionarios.cs</DependentUpon>
+    <Compile Include="view\FmrShowVendas.Designer.cs">
+      <DependentUpon>FmrShowVendas.cs</DependentUpon>
     </Compile>
     <Compile Include="view\FmrOrcamento.cs">
       <SubType>Form</SubType>
@@ -236,14 +241,9 @@
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="view\FmrConfig.resx">
       <DependentUpon>FmrConfig.cs</DependentUpon>
     </EmbeddedResource>
@@ -253,8 +253,8 @@
     <EmbeddedResource Include="view\FmrFinalizar_Orcamento.resx">
       <DependentUpon>FmrFinalizar_Orcamento.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\FmrShowFuncionarios.resx">
-      <DependentUpon>FmrShowFuncionarios.cs</DependentUpon>
+    <EmbeddedResource Include="view\FmrShowVendas.resx">
+      <DependentUpon>FmrShowVendas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\FmrOrcamento.resx">
       <DependentUpon>FmrOrcamento.cs</DependentUpon>
