Botões de limpar acrescentado
Todos os bugs encontrados foram arrumados, e agora o cliente poderá limpar as txtbox pelo botão limpar acrescentado

--- a/TomMotos/TomMotos.csproj
+++ b/TomMotos/TomMotos.csproj
@@ -351,5 +351,11 @@
   <ItemGroup>
     <None Include="Resources\gear %281%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\a07cea0732b87a14882a215f754b5897.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Desenho-Vassoura-PNG-1024x1024.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
